# ECO2DOE

./: .gitignore  README.md  conf.toml  design.toml  pyproject.toml
data/: BatchReportMeta.csv
src/eco2doe/: __init__.py  __main__.py  batch_report.py  design.py  edit.py
tests/: test_batch_report.py
tests/data/: batchreport.tab
